styles/test.css
/* ... */
nav ul li {
	float: left;
}
	nav ul li:hover {
		color: #34282C;
		
	}
		nav ul li a {
			display: block;
			padding: 25px 30px;
			color: white;
			text-decoration: none;

		}
		nav ul li:hover a {
			color: rgb(102, 0, 189);
		}
		nav ul li:hover > ul {
		display: block;
		}


nav ul ul {
	display: none;
	background: rgba(255, 255, 255, 0.9);
	padding: 0;
	position: absolute;
	top: 100%;
	width: auto;
	font-size: 20px;
	text-transform: capitalize;
}

	nav ul ul li {
		float: none; 
		position: relative;
	}
		nav ul ul li a {
			padding: 15px 40px;
			color: #fff;
		}	
			nav ul ul li a:hover {
				color: #34282C;
				font-weight: bolder;
			}

nav ul ul ul {
	position: absolute;
	left: 100%;
	top:0;
}


.main {
	padding: 60px 0px 0px 0px;
	position: relative;
	background-color: none;
	/*background-image: url(http://www.pixeden.com/media/k2/galleries/112/004-subtle-light-pattern-background-texture.jpg);
	*/
	margin: 0 -10px 0 -10px;
}

#faqdiv{
	padding-bottom: 100px;
}

#faqbg {
	background-image: url(../images/dark_purple.png);
	background-position: relative;
}


/* Forms */

#message {
	height: 60px;
}

.form_field {
	margin-bottom: 10px;
	font-family: "Gill Sans"; 
    font-weight: lighter;
    float: right;
    width: 300px;
}

.form_field label {
    display: block;
    float: left;
}

.text-field {
	border: 1px #aaa solid;
	border-radius: 5px;
	height: 20px;
	width: 200px;
	float:right;
}

.text-area {
	border: 1px #aaa solid;
	border-radius: 5px;
	height: 100px;
	width: 200px;
	float: right;
}

#submit {
	background-color: rgb(42,198,255);
	border: none;
	border-radius: 5px;
	color: white;
	font-size: 20px;
    padding: 5px 15px;
	height: 40px;
	font-family: "Gill Sans";
	font-weight: lighter;
	text-transform: uppercase;
	width: 200px;
	margin-right: auto;
	margin-left: auto;
}

#send{
	background-color: rgb(42,198,255);
	border: none;
	border-radius: 5px;
	color: white;
	font-size: 20px;
    padding: 5px 15px;
	height: 40px;
	font-family: "Gill Sans";
	font-weight: lighter;
	text-transform: uppercase;
	margin-right: auto;
	margin-left: auto;
	width:100px;
	margin-top: 10px;
}

#formsubmit {
	background-color: rgb(42,198,255);
	border: 0pt;
	border-radius: 5px;
	color: white;
	font-size: 20px;
    padding: 5px 10px;
	height: 100px;
	font-family: "Gill Sans";
	font-weight: lighter;
	text-transform: uppercase;
	width: 250px;
}

#submit:hover{
	background-color:#8ce0ff;
	font-weight:normal;
}

form{
	width:300px;
	height: 300px;
	margin-left: auto;
	margin-right: auto;
}

form label:hover{
	font-weight: normal;
}


.imgcontainer {
	width: 70%;
	height: 500px;
	overflow: hidden;
	position: relative;
	display:inline-block;
	background-size: cover;
	float:left;

}

#aboutus{
	display:block;
	width: 685px;
	margin-right: auto;
	margin-left: auto;
	float: none;
	height: auto;

}

.announcecontainer {
	position: relative;
	display: inline-block;
	width:30%;
	height:500px;
	background-color: #ccf498;
	float:left;

}

.parallax {
	height: 560px;
	margin: 0 auto;
	width: 100%;
	max-width: 1920px;
	position: relative;
	min-height: 560px;
}

.parallax article{
 	position: absolute; 
 	text-align: center; 
 	top: 60px; 
 	width: 100%; 
 	z-index: 50;
}

#contactbox{
	width: 300px;
	height: 320px;
	margin-right: auto;
	margin-left: auto;
	float: none;
}

/* PAGES */

#home { 
 	background: url('../images/bg1.jpg') 50% 0 repeat fixed;
 	background-size: cover;
 	height: 100%;
}
 
#programs{
	background: url('../images/dark_purple.png') 50% 0 repeat fixed;
}

#about { 
 	background: url('../images/turq_snow-01.png') 50% 0 repeat fixed;

 	height: 650px;
}

#hi {
	background: url('../images/day.jpg') 50% 0 repeat fixed;

	background-size: cover;
}

#sponsors { 
	background: url('../images/light_grey.png') 50% 0 repeat fixed;
	height: 600px;
}

#end { 
	background: url('../images/dark_purple.png') 50% 0 repeat fixed;;
	background-size: cover;

}


#contact { 
 	background: url('../images/light_orange.png') 50% 0 repeat fixed;
}

#day { 
	background: url('../images/yellow_snow.png') 50% 0 repeat fixed;
}


#overnight { 
	background: url('../images/light_orange.png') 50% 0 repeat fixed;

}

#explorasian { 

	background: url('../images/light_pink.png') 50% 0 repeat fixed;
}


#staff { 

	background: url('../images/turq_snow-01.png') 50% 0 repeat fixed;
}

#faq { 
 	background: url('../images/bg1.jpg') 50% 0 repeat fixed;
 	background-size: cover;
 	height: 100%;
 	background-position: fixed;
}
 
 #formsnav {
	background: url('../images/light_blue.png') 50% 0 repeat fixed;
}
 #apply {
	background: url('../images/light_orange.png') 50% 0 repeat fixed;
}
 #forms {
	background: url('../images/yellow_snow.png') 50% 0 repeat fixed;
}
 #status {
	background: url('../images/light_pink.png') 50% 0 repeat fixed;
}

.color {
	-webkit-box-shadow: 0 0 50px rgba(0,0,0,0.8);
 	box-shadow: 0 0 50px rgba(0,0,0,0.8);
	z-index: -5;
}


#texture{
	width:100%;
    height:100%;
    position:fixed;
    top:0px;
    left:0px;
    background:transparent url(../images/light_grey.png) center repeat;
    opacity:0.6;
    z-index: -4;
}

#fees{
	background: url('../images/light_blue.png') 50% 0 repeat fixed;

}

#financialaid{
	background: url('../images/turq_snow.png') 50% 0 repeat fixed;

}

/* CONTAINERS */

article div{
	display: inline-block;
}

.programdiv{
	width: 85%;
	margin-right: auto;
	margin-left: auto;
}
.overlay {
	width: 20%;
	background: rgba(255,255,255,0.7);
	height: 360px;
	padding: 10px 30px;
	margin: 30px;
	float: right;
	border-radius: 10px;
}

#finaid{
	width: 70%;
	margin-left: auto;
	margin-right: auto;
	float: none;
}
.programcontainer {
	width: 300px;
	background: rgba(255,255,255,0.5);
	padding: 10px 30px;
	margin: 0px 30px 0px 30px;
	border-radius: 10px;
	float:left;
}
.programcontainer p{
	text-align:left;
}
.programcontainer p strong{

}

.description{
	font-size: 18px;
}

#announcements {
 	text-align: center; 
 	margin-top: 50px;
	overflow: auto;
	height: 80%;
}
/* ... */

